--- a/public/views/sucursal/agencia/form-editar-agencia-datosPrincipales.html
+++ b/public/views/sucursal/agencia/form-editar-agencia-datosPrincipales.html
@@ -1,6 +1,6 @@
 <h2>Editar agencia</h2>
 
-<form name="form" sg-read-only="!access.administrarAgencias" class="form-horizontal" novalidate>
+<form name="form" sg-read-only="!access.administrarSucursales" class="form-horizontal" novalidate>
     <div class="form-group" ng-class="{ 'has-error' : form.denominacion.$invalid && form.denominacion.$dirty }">
         <label class="col-sm-2 control-label"><span class="required">*</span> Denominacion:</label>
         <div class="col-sm-3">
