--- a/public/views/sucursal/agencia/form-buscar-agencia.html
+++ b/public/views/sucursal/agencia/form-buscar-agencia.html
@@ -2,7 +2,7 @@
 
 <table class="table table-striped table-bordered table-condensed">
     <thead>
-    <tr>
+    <tr ng-if="access.administrarSucursales">
         <th colspan="6">
             <div class="pull-right">
                 <a href="" ui-sref="^.crearAgencia" class="btn btn-primary">Add Agencia</a>
@@ -14,8 +14,8 @@
         <th>Denominacion</th>
         <th>Direccion</th>
         <th width="10%">Ubigeo</th>
-        <th width="5%">Edit</th>
-        <th width="5%">Delete</th>
+        <th width="5%" ng-if="access.administrarSucursales">Edit</th>
+        <th width="5%" ng-if="access.administrarSucursales">Delete</th>
     </tr>
     </thead>
     <tbody>
@@ -30,10 +30,10 @@
         <td>
             <span ng-bind="item.ubigeo"></span>
         </td>
-        <td>
+        <td ng-if="access.administrarSucursales">
             <button type="button" data-ng-click="edit(item)" class="btn btn-info btn-xs">Editar</button>
         </td>
-        <td>
+        <td ng-if="access.administrarSucursales">
             <button type="button" data-ng-click="remove(item)" class="btn btn-danger btn-xs">Eliminar</button>
         </td>
     </tr>
