--- a/public/views/trabajador/form-crear-trabajador.html
+++ b/public/views/trabajador/form-crear-trabajador.html
@@ -3,12 +3,12 @@
 <div class="panel panel-default">
     <div class="panel-body">
 
-        <form name="form" sg-read-only="!access.administrarTrabajadores" class="form-horizontal" novalidate>
+        <form name="form" sg-read-only="!(access.administrarTrabajadores || access.administrarTrabajadoresAgencia)" class="form-horizontal" novalidate>
             <h4><strong>Ubicacion</strong></h4>
             <div class="form-group" ng-class="{ 'has-error' : form.sucursal.$invalid && form.$submitted}">
                 <label class="col-sm-2 control-label"><span class="required">*</span> Sucursal:</label>
                 <div class="col-sm-3">
-                    <ui-select name="sucursal" ng-model="combo.selected.sucursal" autofocus required>
+                    <ui-select name="sucursal" ng-model="combo.selected.sucursal" ng-disabled="!(access.administrarTrabajadores || access.administrarTrabajadoresAgencia)" autofocus required>
                         <ui-select-match placeholder="Sucursal">{{$select.selected.denominacion}}</ui-select-match>
                         <ui-select-choices repeat="item in combo.sucursal | filter: $select.search">
                             <div ng-bind-html="item.denominacion | highlight: $select.search"></div>
@@ -22,7 +22,7 @@
             <div class="form-group" ng-class="{ 'has-error' : form.agencia.$invalid && form.$submitted}">
                 <label class="col-sm-2 control-label"><span class="required">*</span> Agencia:</label>
                 <div class="col-sm-3">
-                    <ui-select name="agencia" ng-model="combo.selected.agencia" required>
+                    <ui-select name="agencia" ng-model="combo.selected.agencia" ng-disabled="!(access.administrarTrabajadores || access.administrarTrabajadoresAgencia)" required>
                         <ui-select-match placeholder="Agencia">{{$select.selected.denominacion}}</ui-select-match>
                         <ui-select-choices repeat="item in combo.agencia | filter: $select.search">
                             <div ng-bind-html="item.denominacion | highlight: $select.search"></div>
@@ -38,7 +38,7 @@
             <div class="form-group" data-ng-class="{ 'has-error' : (form.tipoDocumento.$invalid || form.numeroDocumento.$invalid ) && (form.$submitted || form.numeroDocumento.$dirty )}">
                 <label class="col-sm-2 control-label"><span class="required">*</span> Persona:</label>
                 <div class="col-sm-3">
-                    <ui-select name="tipoDocumento" data-ng-model="combo.selected.tipoDocumento" required>
+                    <ui-select name="tipoDocumento" data-ng-model="combo.selected.tipoDocumento" ng-disabled="!(access.administrarTrabajadores || access.administrarTrabajadoresAgencia)" required>
                         <ui-select-match placeholder="Documento">{{$select.selected.abreviatura}}</ui-select-match>
                         <ui-select-choices repeat="item in combo.tipoDocumento | filter: $select.search">
                             <div data-ng-bind-html="item.abreviatura | highlight: $select.search"></div>
