--- a/public/views/trabajador/form-editar-trabajador-resumen.html
+++ b/public/views/trabajador/form-editar-trabajador-resumen.html
@@ -108,17 +108,6 @@
                                     <p><strong ng-bind="view.loaded.agencia.sucursal.denominacion"></strong></p>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <div class="form-group">
-                                        <p>Abreviatura:&nbsp;</p>
-                                    </div>
-                                </div>
-                                <div class="col-sm-8">
-                                    <p><strong ng-bind="view.loaded.agencia.sucursal.abreviatura"></strong></p>
-                                </div>
-                            </div>
-
                         </div>
                     </div>
                 </div>
@@ -133,31 +122,11 @@
                             <div class="row">
                                 <div class="col-sm-4">
                                     <div class="form-group">
-                                        <p>Codigo:&nbsp;</p>
-                                    </div>
-                                </div>
-                                <div class="col-sm-8">
-                                    <p><strong ng-bind="view.trabajador.agencia.codigo"></strong></p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <div class="form-group">
                                         <p>Denominacion:&nbsp;</p>
                                     </div>
                                 </div>
                                 <div class="col-sm-8">
                                     <p><strong ng-bind="view.trabajador.agencia.denominacion"></strong></p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-4">
-                                    <div class="form-group">
-                                        <p>Abreviatura:&nbsp;</p>
-                                    </div>
-                                </div>
-                                <div class="col-sm-8">
-                                    <p><strong ng-bind="view.trabajador.agencia.abreviatura"></strong></p>
                                 </div>
                             </div>
                         </div>
@@ -182,7 +151,7 @@
                                 </div>
                             </div>
                             <div class="col-sm-9">
-                                <p><strong ng-bind="view.loaded.usuarioTrabajador.usuario"></strong></p>
+                                <p><strong ng-bind="view.trabajador.usuario"></strong></p>
                             </div>
                         </div>
                         <div class="row" sg-data-keep="{module: 'ORGANIZACION', rol: ['ADMIN']}">
