--- a/public/views/trabajador/form-editar-trabajador-datosPrincipales.html
+++ b/public/views/trabajador/form-editar-trabajador-datosPrincipales.html
@@ -1,70 +1,55 @@
-<form name="form" data-ng-submit="submit()" novalidate>
-
-    <h4><strong>Datos principales</strong></h4>
-
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="form-group" ng-class="{ 'has-error' : form.sucursal.$invalid && (form.sucursal.$touched || form.$submitted)}">
-                <label>Sucursal</label>
-                <ui-select name="sucursal" ng-model="combo.selected.sucursal" autofocus required>
-                    <ui-select-autoload pk-name="id" comparator="view.loaded.sucursal.id"></ui-select-autoload>
-                    <ui-select-match placeholder="Sucursal">{{$select.selected.denominacion}}</ui-select-match>
-                    <ui-select-choices repeat="item in combo.sucursal | filter: $select.search">
-                        <div ng-bind-html="item.denominacion | highlight: $select.search"></div>
-                    </ui-select-choices>
-                </ui-select>
-                <div ng-messages="form.sucursal.$error" ng-if="form.sucursal.$touched || form.$submitted">
-                    <div class="has-error" ng-message="required">Ingrese sucursal.</div>
-                </div>
+<form name="form" sg-read-only="!access.administrarTrabajadores" class="form-horizontal" novalidate>
+    <h4><strong>Ubicacion</strong></h4>
+    <div class="form-group" ng-class="{ 'has-error' : form.sucursal.$invalid && form.$submitted}">
+        <label class="col-sm-2 control-label"><span class="required">*</span> Sucursal:</label>
+        <div class="col-sm-3">
+            <ui-select name="sucursal" ng-model="combo.selected.sucursal" ng-disabled="!access.administrarTrabajadores" autofocus required>
+                <ui-select-autoload pk-name="denominacion" comparator="view.trabajador.agencia.sucursal.denominacion"></ui-select-autoload>
+                <ui-select-match placeholder="Sucursal">{{$select.selected.denominacion}}</ui-select-match>
+                <ui-select-choices repeat="item in combo.sucursal | filter: $select.search">
+                    <div ng-bind-html="item.denominacion | highlight: $select.search"></div>
+                </ui-select-choices>
+            </ui-select>
+            <div ng-messages="form.sucursal.$error" ng-if="form.sucursal.$touched || form.$submitted">
+                <div class="has-error" ng-message="required">Ingrese sucursal.</div>
             </div>
         </div>
-        <div class="col-sm-4">
-            <div class="form-group" ng-class="{ 'has-error' : form.agencia.$invalid && (form.agencia.$touched || form.$submitted)}">
-                <label>Agencia</label>
-                <ui-select name="agencia" ng-model="combo.selected.agencia" required>
-                    <ui-select-autoload pk-name="id" comparator="view.trabajador.agencia.id"></ui-select-autoload>
-                    <ui-select-match placeholder="Agencia">{{$select.selected.denominacion}}</ui-select-match>
-                    <ui-select-choices repeat="item in combo.agencia | filter: $select.search">
-                        <div ng-bind-html="item.denominacion | highlight: $select.search"></div>
-                    </ui-select-choices>
-                </ui-select>
-                <div ng-messages="form.agencia.$error" ng-if="form.agencia.$touched || form.$submitted">
-                    <div class="has-error" ng-message="required">Ingrese agencia.</div>
-                </div>
+    </div>
+    <div class="form-group" ng-class="{ 'has-error' : form.agencia.$invalid && form.$submitted}">
+        <label class="col-sm-2 control-label"><span class="required">*</span> Agencia:</label>
+        <div class="col-sm-3">
+            <ui-select name="agencia" ng-model="combo.selected.agencia" ng-disabled="!access.administrarTrabajadores" required>
+                <ui-select-autoload pk-name="denominacion" comparator="view.trabajador.agencia.denominacion"></ui-select-autoload>
+                <ui-select-match placeholder="Agencia">{{$select.selected.denominacion}}</ui-select-match>
+                <ui-select-choices repeat="item in combo.agencia | filter: $select.search">
+                    <div ng-bind-html="item.denominacion | highlight: $select.search"></div>
+                </ui-select-choices>
+            </ui-select>
+            <div ng-messages="form.sucursal.$error" ng-if="form.agencia.$touched || form.$submitted">
+                <div class="has-error" ng-message="required">Ingrese agencia.</div>
             </div>
         </div>
     </div>
 
-    <h4><strong>Persona natural</strong></h4>
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label>Tipo documento</label>
-                <h4><span ng-bind="view.loaded.persona.tipoDocumento"></span></h4>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div class="form-group">
-                <label>N&uacute;mero documento</label>
-                <h4><span ng-bind="view.loaded.persona.numeroDocumento"></span></h4>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <div class="form-group">
-                <label>Persona</label>
-                <h4>
-                    <span ng-bind="view.loaded.persona.apellidoPaterno"></span>&nbsp;
-                    <span ng-bind="view.loaded.persona.apellidoMaterno"></span>,&nbsp;
-                    <span ng-bind="view.loaded.persona.nombres"></span></h4>
-            </div>
+    <h4><strong>Persona</strong></h4>
+    <div class="form-group" ng-class="{ 'has-error' : form.agencia.$invalid && form.$submitted}">
+        <label class="col-sm-2 control-label"></label>
+        <div class="col-sm-6">
+            <h3>
+                <span ng-bind="view.loaded.persona.tipoDocumento"></span>-<span ng-bind="view.loaded.persona.numeroDocumento"></span>
+            </h3>
+            <h3>
+                <span ng-bind="view.loaded.persona.apellidoPaterno"></span>&nbsp;
+                <span ng-bind="view.loaded.persona.apellidoMaterno"></span>,&nbsp;
+                <span ng-bind="view.loaded.persona.nombres"></span>
+            </h3>
         </div>
     </div>
 
-    <p>
-        <button type="submit" class="btn btn-primary" ladda="control.block" data-style="expand-right">Guardar</button>
-        <button type="button" class="btn btn-default" ui-sref="^.resumen">Cancelar</button>
-    </p>
-
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button sg-save>Guardar</button>
+            <button sg-cancel ui-sref="^.resumen">Cancelar</button>
+        </div>
+    </div>
 </form>
