--- a/public/views/trabajador/form-editar-trabajador.html
+++ b/public/views/trabajador/form-editar-trabajador.html
@@ -23,7 +23,7 @@
                             Usuario
                         </a>
                     </li>
-                    <li class="pull-right">
+                    <li class="pull-right" ng-if="access.administrarTrabajadores">
                         <div class="btn-group">
                             <button type="button" data-ng-click="desactivar()" class="btn btn-danger">Desactivar</button>
                         </div>
