--- a/public/views/trabajador/form-editar-trabajador-resumen.html
+++ b/public/views/trabajador/form-editar-trabajador-resumen.html
@@ -105,7 +105,7 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-8">
-                                    <p><strong ng-bind="view.loaded.agencia.sucursal.denominacion"></strong></p>
+                                    <p><strong ng-bind="view.trabajador.agencia.sucursal.denominacion"></strong></p>
                                 </div>
                             </div>
                         </div>
