--- a/public/views/trabajador/form-editar-trabajador-accesoSistema.html
+++ b/public/views/trabajador/form-editar-trabajador-accesoSistema.html
@@ -1,50 +1,34 @@
-<form name="form" data-ng-submit="submit()" novalidate>
-    <h4><strong>Acceso al sistema</strong></h4>
-
-    <div class="row">
+<form name="form" sg-read-only="!access.administrarTrabajadoresAgencia" class="form-horizontal" novalidate>
+    <div class="form-group">
+        <label class="col-sm-3 control-label">Usuario actual:</label>
         <div class="col-sm-4">
-            <div class="form-group">
-                <label>Usuario asignado</label>
-                <h4>
-                    <span ng-if="view.loaded.trabajadorUsuario.usuario" ng-bind="view.loaded.trabajadorUsuario.usuario"></span>
-                    <span ng-if="!view.loaded.trabajadorUsuario.usuario">No tiene un usuario asignado</span>
-                </h4>
-            </div>
+            <h3>
+                <span ng-if="view.trabajador.usuario" data-ng-bind="view.trabajador.usuario"></span>
+                <span ng-if="!view.trabajador.usuario">No tiene un usuario asignado</span>
+            </h3>
         </div>
+    </div>
+    <div class="form-group" ng-class="{ 'has-error' : form.usuario.$invalid && (form.usuario.$touched || form.$submitted)}">
+        <label class="col-sm-3 control-label"><span class="required">*</span> Usuarios disponibles:</label>
         <div class="col-sm-4">
-            <div class="form-group">
-                <div class="form-group">
-                    <label>&nbsp;</label>
-                    <div class="input-group">
-                        <button type="button" ng-if="view.loaded.trabajadorUsuario.usuario" ng-click="desvincular()" class="btn btn-danger">Desvincular</button>
-                    </div>
-                </div>
+            <ui-select name="usuario" ng-model="combo.selected.usuario" ui-autofocus required>
+                <ui-select-autoload pk-name="username" comparator="view.trabajador.usuario"></ui-select-autoload>
+                <ui-select-match placeholder="Seleccione">{{$select.selected.username}}</ui-select-match>
+                <ui-select-choices repeat="item in combo.usuario track by $index"
+                                   refresh="refreshComboUsuario($select.search)"
+                                   refresh-delay="500">
+                    <div ng-bind-html="item.username | highlight: $select.search"></div>
+                </ui-select-choices>
+            </ui-select>
+            <div ng-messages="form.usuario.$error" ng-if="form.usuario.$touched || form.$submitted">
+                <div class="has-error" ng-message="required">Ingrese usuario.</div>
             </div>
         </div>
     </div>
-
-    <div class="row">
-        <div class="col-sm-4">
-            <div class="form-group" ng-class="{ 'has-error' : form.usuario.$invalid && (form.usuario.$touched || form.$submitted)}">
-                <label>Usuarios disponibles</label>
-                <ui-select name="usuario" ng-model="combo.selected.usuario" ui-autofocus required>
-                    <ui-select-autoload pk-name="username" comparator="view.trabajador.usuario"></ui-select-autoload>
-                    <ui-select-match placeholder="Seleccione">{{$select.selected.username}}</ui-select-match>
-                    <ui-select-choices repeat="item in combo.usuario track by $index"
-                                       refresh="refreshComboUsuario($select.search)"
-                                       refresh-delay="500">
-                        <div ng-bind-html="item.username | highlight: $select.search"></div>
-                    </ui-select-choices>
-                </ui-select>
-                <div ng-messages="form.usuario.$error" ng-if="form.usuario.$touched || form.$submitted">
-                    <div class="has-error" ng-message="required">Ingrese usuario.</div>
-                </div>
-            </div>
+    <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+            <button sg-save>Guardar</button>
+            <button sg-cancel ui-sref="^.resumen">Cancelar</button>
         </div>
     </div>
-
-    <p>
-        <button type="submit" class="btn btn-primary" ladda="control.block" data-style="expand-right">Guardar</button>
-        <button type="button" class="btn btn-default" ui-sref="^.resumen">Cancelar</button>
-    </p>
 </form>
